kubernetes/base/mongodb.yaml

apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
    scope: db
  ports:
    - protocol: TCP
      port: 27017
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongo
    scope: db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
      scope: db
  template:
    metadata:
      labels:
        app: mongodb
        scope: db
    spec:
      containers:
      - name: mongodb
        image: arm64v8/mongo:4.0-xenial
        ports:
        - containerPort: 27017
