kubernetes/base/wordle-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordle-frontend
spec:
  selector:
    app: wordle
    scope: frontend
  ports:
    - protocol: TCP
      port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordle-frontend
  labels:
    app: wordle
    scope: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wordle
      scope: frontend
  template:
    metadata:
      labels:
        app: wordle
        scope: frontend
    spec:
      containers:
      - name: wordle-frontend
        image: wordle-frontend:latest
        ports:
        - containerPort: 80
