kubernetes/base/wordle-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordle-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: wordle-backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordle-frontend
            port:
              number: 80
